[gd_scene load_steps=9 format=3 uid="uid://b5hoy7mvwr5j"]

[ext_resource type="Script" uid="uid://cvax7wjw4ec6j" path="res://trigger.gd" id="1_ye7ng"]
[ext_resource type="Material" uid="uid://w4u0f1vksnwx" path="res://Mats/orange.tres" id="2_hhdxi"]
[ext_resource type="Texture2D" uid="uid://cxjxvqmf4boxq" path="res://textures/green.png" id="3_hhdxi"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4arys"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.0980392)

[sub_resource type="BoxShape3D" id="BoxShape3D_6iypd"]
size = Vector3(6, 4, 6)

[sub_resource type="ViewportTexture" id="ViewportTexture_hhdxi"]
viewport_path = NodePath("Area3D/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2fcw7"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_hhdxi")

[sub_resource type="PlaneMesh" id="PlaneMesh_hhdxi"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_2fcw7")
subdivide_width = 2
subdivide_depth = 2

[node name="ControlPoint" type="Node3D"]

[node name="Area3D" type="Area3D" parent="."]
script = ExtResource("1_ye7ng")

[node name="zone" type="CSGBox3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
calculate_tangents = false
size = Vector3(6, 4, 6)
material = SubResource("StandardMaterial3D_4arys")

[node name="zone2" type="CSGBox3D" parent="Area3D/zone"]
operation = 2
calculate_tangents = false
size = Vector3(5.7, 4, 5.7)
material = SubResource("StandardMaterial3D_4arys")

[node name="triggerPlatform" type="CSGBox3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
calculate_tangents = false
size = Vector3(6, 0.2, 6)
material = ExtResource("2_hhdxi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_6iypd")

[node name="triggerTimer" type="Timer" parent="Area3D/CollisionShape3D"]
wait_time = 10.0
one_shot = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.3, 0)
mesh = SubResource("PlaneMesh_hhdxi")

[node name="SubViewport" type="SubViewport" parent="Area3D"]
handle_input_locally = false

[node name="Control" type="Control" parent="Area3D/SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="Area3D/SubViewport/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 10.0
value = 10.0
allow_greater = true
allow_lesser = true
fill_mode = 5
texture_progress = ExtResource("3_hhdxi")
tint_under = Color(0, 0, 0, 1)
tint_over = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="Area3D/SubViewport/Control"]
visible = false
layout_mode = 2
offset_top = 228.0
offset_right = 512.0
offset_bottom = 283.0
theme_override_font_sizes/font_size = 75
text = "Time Left: "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Area3D" to="Area3D" method="_on_body_entered"]
[connection signal="body_exited" from="Area3D" to="Area3D" method="_on_body_exited"]
[connection signal="timeout" from="Area3D/CollisionShape3D/triggerTimer" to="Area3D" method="_on_trigger_timer_timeout"]
